--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="page" class="layout">
         <header>
             <div class="avatar">
-                <img src="./img/avader.PNG" alt="头像">
+                <img src="./img/avader.png" alt="头像">
             </div>
             <div class="title">
                 <div class="resume-link">
