--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                         <span>学历</span>
                         <span>本科</span>
                     </div>
-                    <div class="item">
+                    <!-- <div class="item">
                         <span>所在地</span>
                         <span>深圳</span>
-                    </div>
+                    </div> -->
                     <div class="item">
                         <span>GitHub</span>
                         <span><a href="https://github.com/Michcola" target="_blank">Michcola</a></span>
