--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <!-- <div class="item">
                         <span>所在地</span>
-                        <span>深圳</span>
+                        <span>厦门</span>
                     </div> -->
                     <div class="item">
                         <span>GitHub</span>
